// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<PasswordChange /> rendering should not show 'cancel' button if password is expired 1`] = `
<div>
  <div
    class="container content"
    id="password-change"
  >
    <div
      class="inner"
    >
      <form
        aria-label="password change form"
        class="main-column"
      >
        <div
          class="inner"
        >
          <h1>
            Change your password
          </h1>
          <p>
            Use the form below to change your password.
          </p>
          <div
            class="row current-password"
          >
            <label
              for="current-password"
            >
              Current password
            </label>
            <input
              autocomplete="password"
              class="input"
              id="current-password"
              name="currentPassword"
              pattern="^.{8,}$"
              placeholder="Your current password"
              required=""
              title="password must be a minimum of 6 characters"
              type="password"
              value=""
            />
            <div
              class=""
              data-testid="password-toggle-icon"
              role="button"
              tabindex="0"
            >
              <i
                class="eye"
                title="reveal password"
              />
            </div>
          </div>
          <div
            class="row new-password"
          >
            <label
              for="new-password"
            >
              New Password
            </label>
            <input
              autocomplete="password"
              class="input"
              id="new-password"
              name="newPassword1"
              pattern="^.{8,}$"
              placeholder="Your new password"
              required=""
              title="password must be a minimum of 6 characters"
              type="password"
              value=""
            />
            <div
              class=""
              data-testid="password-toggle-icon"
              role="button"
              tabindex="0"
            >
              <i
                class="eye"
                title="reveal password"
              />
            </div>
          </div>
          <div
            class="row password-confirm"
          >
            <label
              for="password-confirm"
            >
              Confirm password
            </label>
            <input
              autocomplete="password"
              class="input"
              id="password-confirm"
              name="newPassword2"
              pattern="^.{8,}$"
              placeholder="confirm password"
              required=""
              title="password must be a minimum of 6 characters"
              type="password"
              value=""
            />
            <div
              class=""
              data-testid="password-toggle-icon"
              role="button"
              tabindex="0"
            >
              <i
                class="eye"
                title="reveal password"
              />
            </div>
          </div>
          <div
            class="row submit"
          >
            <input
              class="button full"
              type="submit"
              value="Change Password"
            />
          </div>
        </div>
      </form>
      <div
        class="side-column contact"
      >
        <div
          class="inner"
        >
          <div
            class="row"
          >
            <span
              class="label"
            >
              Email
              :
            </span>
            <a
              class="link"
              href="mailto:support@openwisp.org"
            >
              support@openwisp.org
            </a>
          </div>
          <div
            class="row"
          >
            <span
              class="label"
            >
              Helpdesk
              :
            </span>
            <a
              class="link"
              href="tel:+1234567890"
            >
              +1234567890
            </a>
          </div>
          <div
            class="contact-links"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<PasswordChange /> rendering should render correctly 1`] = `
<div>
  <div
    class="container content"
    id="password-change"
  >
    <div
      class="inner"
    >
      <form
        aria-label="password change form"
        class="main-column"
      >
        <div
          class="inner"
        >
          <h1>
            Change your password
          </h1>
          <p>
            Use the form below to change your password.
          </p>
          <div
            class="row current-password"
          >
            <label
              for="current-password"
            >
              Current password
            </label>
            <input
              autocomplete="password"
              class="input"
              id="current-password"
              name="currentPassword"
              pattern="^.{8,}$"
              placeholder="Your current password"
              required=""
              title="password must be a minimum of 6 characters"
              type="password"
              value=""
            />
            <div
              class=""
              data-testid="password-toggle-icon"
              role="button"
              tabindex="0"
            >
              <i
                class="eye"
                title="reveal password"
              />
            </div>
          </div>
          <div
            class="row new-password"
          >
            <label
              for="new-password"
            >
              New Password
            </label>
            <input
              autocomplete="password"
              class="input"
              id="new-password"
              name="newPassword1"
              pattern="^.{8,}$"
              placeholder="Your new password"
              required=""
              title="password must be a minimum of 6 characters"
              type="password"
              value=""
            />
            <div
              class=""
              data-testid="password-toggle-icon"
              role="button"
              tabindex="0"
            >
              <i
                class="eye"
                title="reveal password"
              />
            </div>
          </div>
          <div
            class="row password-confirm"
          >
            <label
              for="password-confirm"
            >
              Confirm password
            </label>
            <input
              autocomplete="password"
              class="input"
              id="password-confirm"
              name="newPassword2"
              pattern="^.{8,}$"
              placeholder="confirm password"
              required=""
              title="password must be a minimum of 6 characters"
              type="password"
              value=""
            />
            <div
              class=""
              data-testid="password-toggle-icon"
              role="button"
              tabindex="0"
            >
              <i
                class="eye"
                title="reveal password"
              />
            </div>
          </div>
          <div
            class="row submit"
          >
            <input
              class="button full"
              type="submit"
              value="Change Password"
            />
          </div>
          <div
            class="row cancel"
          >
            <a
              class="button full"
              href="/default/status"
            >
              Cancel
            </a>
          </div>
        </div>
      </form>
      <div
        class="side-column contact"
      >
        <div
          class="inner"
        >
          <div
            class="row"
          >
            <span
              class="label"
            >
              Email
              :
            </span>
            <a
              class="link"
              href="mailto:support@openwisp.org"
            >
              support@openwisp.org
            </a>
          </div>
          <div
            class="row"
          >
            <span
              class="label"
            >
              Helpdesk
              :
            </span>
            <a
              class="link"
              href="tel:+1234567890"
            >
              +1234567890
            </a>
          </div>
          <div
            class="contact-links"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<PasswordChange /> rendering with placeholder translation tags should render translation placeholder correctly 1`] = `
<div>
  <div
    class="container content"
    id="password-change"
  >
    <div
      class="inner"
    >
      <form
        aria-label="password change form"
        class="main-column"
      >
        <div
          class="inner"
        >
          <h1>
            PWD_CHANGE_TITL
          </h1>
          <p>
            PWD_CHANGE_HELP_TXT
          </p>
          <div
            class="row current-password"
          >
            <label
              for="current-password"
            >
              CURR_PWD_LBL
            </label>
            <input
              autocomplete="password"
              class="input"
              id="current-password"
              name="currentPassword"
              pattern="^.{8,}$"
              placeholder="CURR_PWD_PHOLD"
              required=""
              title="PWD_PTRN_DESC"
              type="password"
              value=""
            />
            <div
              class=""
              data-testid="password-toggle-icon"
              role="button"
              tabindex="0"
            >
              <i
                class="eye"
                title="PWD_REVEAL"
              />
            </div>
          </div>
          <div
            class="row new-password"
          >
            <label
              for="new-password"
            >
              PWD1_LBL
            </label>
            <input
              autocomplete="password"
              class="input"
              id="new-password"
              name="newPassword1"
              pattern="^.{8,}$"
              placeholder="PWD1_PHOLD"
              required=""
              title="PWD_PTRN_DESC"
              type="password"
              value=""
            />
            <div
              class=""
              data-testid="password-toggle-icon"
              role="button"
              tabindex="0"
            >
              <i
                class="eye"
                title="PWD_REVEAL"
              />
            </div>
          </div>
          <div
            class="row password-confirm"
          >
            <label
              for="password-confirm"
            >
              CONFIRM_PWD_LBL
            </label>
            <input
              autocomplete="password"
              class="input"
              id="password-confirm"
              name="newPassword2"
              pattern="^.{8,}$"
              placeholder="CONFIRM_PWD_PHOLD"
              required=""
              title="PWD_PTRN_DESC"
              type="password"
              value=""
            />
            <div
              class=""
              data-testid="password-toggle-icon"
              role="button"
              tabindex="0"
            >
              <i
                class="eye"
                title="PWD_REVEAL"
              />
            </div>
          </div>
          <div
            class="row submit"
          >
            <input
              class="button full"
              type="submit"
              value="PASSWORD_CHANGE"
            />
          </div>
          <div
            class="row cancel"
          >
            <a
              class="button full"
              href="/default/status"
            >
              CANCEL
            </a>
          </div>
        </div>
      </form>
      <div
        class="side-column contact"
      >
        <div
          class="inner"
        >
          <div
            class="row"
          >
            <span
              class="label"
            >
              EMAIL
              :
            </span>
            <a
              class="link"
              href="mailto:support@openwisp.org"
            >
              support@openwisp.org
            </a>
          </div>
          <div
            class="row"
          >
            <span
              class="label"
            >
              HELPDESK
              :
            </span>
            <a
              class="link"
              href="tel:+1234567890"
            >
              +1234567890
            </a>
          </div>
          <div
            class="contact-links"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;
